# eBoot

./: .clang-tidy  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  SECURITY.md  build.yaml  run_all_tests.py
.github/workflows/: build.yml  ci.yml  codeql.yml  cross-repo-dispatch.yml  eosim-sanity.yml  nightly.yml  qemu-test.yml  release.yml  simulation-test.yml  video-build.yml  weekly.yml
boards/8051/: board_8051.c  board_8051.h
boards/alpha/: board_alpha.c  board_alpha.h
boards/arc/: board_arc.c  board_arc.h
boards/arm11/: board_arm11.c  board_arm11.h
boards/arm7tdmi/: board_arm7tdmi.c  board_arm7tdmi.h
boards/arm9/: board_arm9.c  board_arm9.h
boards/avr/: board_avr.c  board_avr.h
boards/avr32/: board_avr32.c  board_avr32.h
boards/blackfin/: board_blackfin.c  board_blackfin.h
boards/c166/: board_c166.c  board_c166.h
boards/c28x/: board_c28x.c  board_c28x.h
boards/c6000/: board_c6000.c  board_c6000.h
boards/ceva/: board_ceva.c  board_ceva.h
boards/cortex_a15/: board_cortex_a15.c  board_cortex_a15.h
boards/cortex_a35/: board_cortex_a35.c  board_cortex_a35.h
boards/cortex_a5/: board_cortex_a5.c  board_cortex_a5.h
boards/cortex_a55/: board_cortex_a55.c  board_cortex_a55.h
boards/cortex_a76/: board_cortex_a76.c  board_cortex_a76.h
boards/cortex_a9/: board_cortex_a9.c  board_cortex_a9.h
boards/cortex_m0/: board_cortex_m0.c  board_cortex_m0.h
boards/cortex_m0plus/: board_cortex_m0plus.c  board_cortex_m0plus.h
boards/cortex_m23/: board_cortex_m23.c  board_cortex_m23.h
boards/cortex_m3/: board_cortex_m3.c  board_cortex_m3.h
boards/cortex_m33/: board_cortex_m33.c  board_cortex_m33.h
boards/cortex_m55/: board_cortex_m55.c  board_cortex_m55.h
boards/cortex_m85/: board_cortex_m85.c  board_cortex_m85.h
boards/cortex_r4/: board_cortex_r4.c  board_cortex_r4.h
boards/cortex_r52/: board_cortex_r52.c  board_cortex_r52.h
boards/cris/: board_cris.c  board_cris.h
boards/dspic/: board_dspic.c  board_dspic.h
boards/esp32c3/: board_esp32c3.c  board_esp32c3.h
boards/esp32s3/: board_esp32s3.c  board_esp32s3.h
boards/hexagon/: board_hexagon.c  board_hexagon.h
boards/ia64/: board_ia64.c  board_ia64.h
boards/kalimba/: board_kalimba.c  board_kalimba.h
boards/lm32/: board_lm32.c  board_lm32.h
boards/loongarch/: board_loongarch.c  board_loongarch.h
boards/microblaze/: board_microblaze.c  board_microblaze.h
boards/mips64/: board_mips64.c  board_mips64.h
boards/msp430/: board_msp430.c  board_msp430.h
boards/nios2/: board_nios2.c  board_nios2.h
boards/openrisc/: board_openrisc.c  board_openrisc.h
boards/parisc/: board_parisc.c  board_parisc.h
boards/pic16/: board_pic16.c  board_pic16.h
boards/pic18/: board_pic18.c  board_pic18.h
boards/pic24/: board_pic24.c  board_pic24.h
boards/pic32/: board_pic32.c  board_pic32.h
boards/ppc64/: board_ppc64.c  board_ppc64.h
boards/pru/: board_pru.c  board_pru.h
boards/riscv32/: board_riscv32.c  board_riscv32.h
boards/rl78/: board_rl78.c  board_rl78.h
boards/rx/: board_rx.c  board_rx.h
boards/s390/: board_s390.c  board_s390.h
boards/sharc/: board_sharc.c  board_sharc.h
boards/sparc64/: board_sparc64.c  board_sparc64.h
boards/tricore/: board_tricore.c  board_tricore.h
boards/x86/: board_x86.c
boards/xtensa_hifi/: board_xtensa_hifi.c  board_xtensa_hifi.h
build_sim/: CMakeCache.txt  Makefile  cmake_install.cmake
ci/: ci_security.yml  security_test.sh
cmake/: security_checks.cmake
configs/: flash_tools.yaml
core/: crypto_boot.c  debug_lock.c  ecc_scrub.c  ed25519_verify.c  fdt_loader.c  fw_decrypt.c  fw_update.c  image_tlv.c  image_verify.c  keystore.c  mpu_boot.c  power_init.c  recovery.c  rtos_boot.c  runtime_services.c  secure_boot.c  slot_manager.c
docs/: PRODUCTION_TESTING_REPORT.md  eflash.md  key_lifecycle.md  mcuboot_comparison.md  secure_boot_chain.md  security.md  security_review_checklist.md  threat_model.md
docs/book/: book.md  references.bib
docs/site/: index.html
docs/site/extension/: manifest.json  popup.html
docs/site/mobile/: App.tsx  app.json
hal/: hal_core.c
include/: eos_crypto_boot.h  eos_debug_lock.h  eos_fdt_loader.h  eos_fw_decrypt.h  eos_hal.h  eos_image_tlv.h  eos_keystore.h  eos_secure_boot.h  eos_types.h
promo/: generate_audio.py  promo_scene.py
stage0/: hw_init_minimal.c  jump_stage1.c  reset_entry.c
stage1/: jump_app.c  main.c
tests/: CMakeLists.txt  production_test_suite.py  run_comprehensive_tests.py  run_extended_tests.py  simulate_tests.py  test_emulation_simulation.c  test_performance_benchmarks.c
tests/functional/: test_functional_e2e.py
tests/fuzz/: CMakeLists.txt  fuzz_bootctl.c  fuzz_crypto.c  fuzz_fw_update.c  fuzz_image_verify.c  fuzz_recovery_protocol.c
tests/performance/: test_performance_benchmarks.py
tests/simulation/: test_emulation_simulation.py
tests/unit/: test_boot_log.c  test_ed25519.c  test_keystore.c  test_slot_manager.c  test_unit_core.py
tools/: eflash.py  embed_stage1_hash.py  eos_sign.py  sign_image.py
